// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon-size prop 1`] = `
<div class="zv-grid zv-hairline--top">
  <div class="zv-grid-item" style="flex-basis: 25%;">
    <div class="zv-grid-item__content zv-grid-item__content--center zv-hairline"><i class="zv-icon zv-icon-success zv-grid-item__icon" style="font-size: 10px;">
        <!----></i></div>
  </div>
</div>
`;

exports[`render icon-slot 1`] = `
<div class="zv-grid zv-hairline--top">
  <div class="zv-grid-item" style="flex-basis: 25%;">
    <div class="zv-grid-item__content zv-grid-item__content--center zv-hairline">
      <div class="zv-grid-item__icon-wrapper">
        <div></div>
        <div class="zv-info">1</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sqaure and set gutter 1`] = `
<div class="zv-grid" style="padding-left: 10rem;">
  <div class="zv-grid-item zv-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="zv-grid-item__content zv-grid-item__content--center zv-grid-item__content--square zv-grid-item__content--surround zv-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
  <div class="zv-grid-item zv-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="zv-grid-item__content zv-grid-item__content--center zv-grid-item__content--square zv-grid-item__content--surround zv-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
  <div class="zv-grid-item zv-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="zv-grid-item__content zv-grid-item__content--center zv-grid-item__content--square zv-grid-item__content--surround zv-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
</div>
`;
